--- a/cosmos-r2.html
+++ b/cosmos-r2.html
@@ -4,10 +4,12 @@
       color: "#E9967A",
       defaults: {
         name: { value: "" },
-        uri: { value: "", required: true },
-        key: { value: "", required: true },
         databaseId: { value: "", required: true },
         containerId: { value: "", required: true },
+      },
+      credentials: {        
+        uri: { type: "text", required: true},
+        key: { type: "password", required: true},
       },
       inputs: 1,
       outputs: 1,
@@ -29,7 +31,7 @@
     </div>
     <div class="form-row">
       <label for="node-input-key"><i class="icon-key"></i> Key</label>
-      <input type="text" id="node-input-key" placeholder="Key">
+      <input type="password" id="node-input-key" placeholder="Key">
     </div>
     <div class="form-row">
       <label for="node-input-databaseId"><i class="icon-database"></i> Database ID</label>
